Fix archive years not showing correctly

--- a/theme/templates/archives.html
+++ b/theme/templates/archives.html
@@ -26,6 +26,7 @@ Full archives of {{ SITENAME|striptags|e }} blog.
 
 {% block content %}
 
+
 <div class="row-fluid">
     <header class="page-header span10 offset2">
     <h1><a href="{{ SITEURL }}/archives.html">All Posts</a></h1>
@@ -34,24 +35,24 @@ Full archives of {{ SITENAME|striptags|e }} blog.
 <div class="row-fluid">
     <div class="span10 offset2">
         <div class="blog-archives">
-            {% set last_year = 0 %}
+            {% set vars = {'last_year': 0} %}
             {% for article in dates %}
-            {% set year = article.date.strftime('%Y') %}
-            {%if last_year != year %}
-            <h2 id="{{year }}"><a href="#{{year}}">{{ year }}</a></h2>
-            {% set last_year = year %}
-            {% endif %}
-            {% set next_year = 0 %}
-            {% if not loop.last %}
-            {% set next = loop.index0 + 1 %}
-            {% set next_article = dates[next] %}
-            {% set next_year = next_article.date.strftime('%Y') %}
-            {% endif %}
-            {% if next_year != year %}
-            <article class="last-entry-of-year">
-            {% else %}
-            <article>
-            {% endif %}
+                {% set year = article.date.strftime('%Y') %}
+                {% if vars.last_year != year %}
+                    <h2 id="{{year}}"><a href="#{{year}}">{{ year }}</a></h2>
+                    {% if vars.update({'last_year': year}) %} {% endif %}
+                {% endif %}
+                {% set next_year = 0 %}
+                {% if not loop.last %}
+                    {% set next = loop.index0 + 1 %}
+                    {% set next_article = dates[next] %}
+                    {% set next_year = next_article.date.strftime('%Y') %}
+                {% endif %}
+                {% if next_year != year %}
+                    <article class="last-entry-of-year">
+                {% else %}
+                    <article>
+                {% endif %}
             <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }} {%if article.subtitle %} <small> {{ article.subtitle }} </small> {% endif %} </a>
             <time pubdate="pubdate" datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>
             </article>
