--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -80,12 +80,10 @@
         </div>
         <div class="container-fluid">
             <div class="row-fluid">
-                <div class="span1"></div>
-                <div class="span10">
+                <div class="offset2 span8">
                     {% block content %}
                     {% endblock content %}
                 </div>
-                <div class="span1"></div>
             </div>
         </div>
         <div id="push"></div>
