--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -38,7 +38,7 @@
     </div>
     <div class="span9 article-content">
        {% else %}
-        <div class="span9 offset1 article-content">
+        <div class="span9 article-content">
             {% endif %}
 
             {% import '_includes/translations.html' as translations with context %}
